--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="dine-icon.png">
-  <title>Restaurants & Tables</title>
+  <title>GoDine</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   
@@ -19,7 +19,12 @@
   <div class="container my-5" x-data="restaurantApp()" x-init="init()">
 
     <!-- RESTAURANTS -->
-    <h2 class="mb-4">Restaurants</h2>
+    <h2 class="my-4 d-flex align-items-baseline">
+      Restaurants
+      <small class="text-muted fst-italic ms-3 fs-6">
+        Select a restaurant you would like to visit. It works worldwide with 100+ currencies.
+      </small>
+    </h2>
     <div class="row g-4">
       <template x-for="restaurant in restaurants" :key="restaurant.id">
         <div class="col-12 col-sm-6 col-md-4">
@@ -53,7 +58,15 @@
     </div>
 
     <!-- TABLES -->
-    <h2 class="my-4" x-show="tables.length">Tables</h2>
+    <template x-if="tables.length">
+      <h2 class="my-4 d-flex align-items-baseline" x-show="tables.length">
+        Tables
+        <small class="text-muted fst-italic ms-3 fs-6">
+          Imagine you sit at a table with your friends and scan the QR code. Everyone can add their own items to the order.
+        </small>
+      </h2>
+    </template>
+
     <div class="row g-3">
       <template x-for="table in tables" :key="table.id">
         <div class="col-6 col-md-3">
@@ -76,31 +89,40 @@
       <div class="row mt-5" x-show="menu && order">
         <!-- LEFT COLUMN – MENU (2/3 width) -->
         <div class="col-md-8">
-          <h3 class="mb-4 fw-bold border-bottom">Menu</h3>
-
+          <h3 class="mb-4 fw-bold border-bottom d-flex align-items-baseline">
+            Menu
+            <small class="text-muted fw-normal fst-italic ms-3 fs-6">
+              Trust me - You can upload images for menu items they just aren’t shown in this demo.
+            </small>
+          </h3>
           <template x-for="category in menu.categories" :key="category.id">
-            <div class="mb-5">
-              <h4 class="fw-semibold  pb-2 mb-3" x-text="category.name"></h4>
-              <template x-for="item in category.items" :key="item.id">
-                <div class="p-3 mb-3 border rounded shadow-sm d-flex justify-content-between align-items-center menu-item">
-                  <div class="pe-3">
-                    <div class="d-flex align-items-center mb-1">
-                      <span class="fs-5 fw-semibold me-2" x-text="item.name"></span>
-                      <span class="badge bg-secondary" x-text="centsToFloat(item.price_in_cents)"></span>
-                    </div>
-                    <p class="text-muted mb-0" x-text="item.description"></p>
-                  </div>
-                  <button 
-                    class="btn btn-primary btn-sm"
-                    @click.stop="addItemToOrder(item.id)"
-                    x-show="order.status === 'open'"
-                    x-bind:class="{'d-flex': order.status === 'open'}"
-                  >
-                    <i class="bi bi-plus-lg font-bold"></i>
-                  </button>
-                </div>
-              </template>
+            <div class="mb-5 row g-3">
+              <!-- Category name column -->
+              <div class="col-12 col-lg-2 d-flex align-items-start">
+                <h5 class="fw-semibold mb-0" x-text="category.name"></h5>
+              </div>
 
+              <!-- Items column -->
+              <div class="col-12 col-lg-10">
+                <template x-for="item in category.items" :key="item.id">
+                  <div class="p-3 mb-3 border rounded shadow-sm d-flex justify-content-between align-items-center menu-item">
+                    <div class="pe-3">
+                      <div class="d-flex align-items-center mb-1 flex-wrap">
+                        <span class="fs-5 fw-semibold me-2" x-text="item.name"></span>
+                        <span class="badge bg-secondary" x-text="`${centsToFloat(item.price_in_cents)} ${order.currency}`"></span>
+                      </div>
+                      <p class="text-muted mb-0" x-text="item.description"></p>
+                    </div>
+                    <button 
+                      class="btn btn-primary btn-sm"
+                      @click.stop="addItemToOrder(item.id)"
+                      x-show="order.status === 'open'"
+                    >
+                      <i class="bi bi-plus-lg"></i>
+                    </button>
+                  </div>
+                </template>
+              </div>
             </div>
           </template>
         </div>
@@ -163,25 +185,27 @@
                     class="btn btn-primary btn-sm"
                     @click="editTip(tipAmount)"
                   >
-                    Tip
+                    Add Tip
                   </button>
                 </div>
 
-                <button 
-                  class="btn btn-warning btn-sm flex-shrink-0"
-                  @click="lockOrder"
-                  x-show="
-                    order.status === 'open'  && order.total_price_in_cents > 0"
-                >
-                  Notify Waiter
-                </button>
-
-                <button 
+                <div class="position-relative d-inline-block">
+                  <button 
+                    class="btn btn-warning btn-sm flex-shrink-0"
+                    @click="lockOrder"
+                    x-show="
+                      order.status === 'open'  && order.total_price_in_cents > 0"
+                    >
+                      Notify Waiter
+                  </button>
+                  <!-- Pay button -->
+                  <button 
                   class="btn btn-success btn-sm flex-shrink-0"
                   @click="initPayment"
                   x-show="
-                    (order.status === 'locked' && (order.tip_amount_in_cents > 0 || order.total_price_in_cents > 0))
-                    || (order.status === 'open' && !order.total_price_in_cents > 0 && order.tip_amount_in_cents > 0)"
+                      (order.status === 'locked' && (order.tip_amount_in_cents > 0 || order.total_price_in_cents > 0))
+                      || (order.status === 'open' && !order.total_price_in_cents > 0 && order.tip_amount_in_cents > 0)
+                    "
                   :disabled="loadingPayment"
                 >
                   <span x-show="loadingPayment" class="inline-flex items-center">
@@ -189,6 +213,23 @@
                   </span>
                   <span x-show="!loadingPayment">Pay</span>
                 </button>
+
+                <div 
+                    x-show="order.status === 'locked' && !loadingPayment"
+                    class="position-absolute bg-dark text-white p-2 rounded shadow"
+                    style="top: 130%; left: 50%; transform: translateX(-50%); min-width: 300px; z-index: 10;"
+                >
+                    Order is currently locked and the waiter has been notified.<br>
+                    Only restaurant staff can modify items or unlock the order.<br>
+                    You can still add tips.<br><br>
+                    Once you’re done dining, you can proceed with payment.
+                    <div 
+                        class="position-absolute"
+                        style="top: -6px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 6px solid black;">
+                    </div>
+                </div>
+              </div>
+                
 
               </div>
             </div>
